test/cases/compile_errors/usingnamespace_with_wrong_type.zig
usingnamespace void;

// error
// backend=stage2
// target=native
//
// :1:1: error: type void has no namespace
